# Insighta-Labs

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  http_runtime.py  ids.py  main.py
app/api/: __init__.py  dependencies.py  middleware.py  responses.py  web_support.py
app/api/routes/: auth.py  profiles.py  system.py  web.py
app/models/: __init__.py  entities.py
app/services/: __init__.py  auth.py  profiles.py
app/templates/: account.html  base.html  dashboard.html  login.html  mock_authorize.html  profile_detail.html  profiles.html  search.html
