[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insighta-labs"
version = "0.1.0"
description = "Insighta Labs+ secure access and multi-interface integration project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pyjwt>=2.9.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "requests>=2.32.3",
  "rich>=13.9.0",
  "sqlalchemy>=2.0.36",
  "typer>=0.15.1",
  "uvicorn[standard]>=0.32.1",
]

[project.scripts]
insighta = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["app*"]
